Fix spacing and layout

--- a/selfservechromeextension/on_page.css
+++ b/selfservechromeextension/on_page.css
@@ -25,8 +25,12 @@
 }
 
 #designDivs input {
-    margin: 0px;
+    margin: 1px;
     padding: 0px;
+}
+
+#designDivs span {
+    text-align: right;
 }
 
 #nextButton {
